Bug 840038 - [MMS][User Story] Image rescaling to 300kB(Apply to composer attachment)

--- a/apps/sms/index.html
+++ b/apps/sms/index.html
@@ -133,6 +133,11 @@
                     class="hide">
               <p></p>
             </section>
+            <section id="messages-resize-notice"
+                    role="notification"
+                    class="hide">
+              <p data-l10n-id="resize-image">Resizing the attached image</p>
+            </section>
           </div>
         </div>
         <article id="messages-container" class="view-body article-list" data-type="list">
